<resources>
    <string name="app_name">PlanLekcji</string>
    <string name="undo">UNDO</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="nav_header_subtitle">jakub.podsiadlo2159@gmail.com</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_events">Events</string>
    <string name="nav_grades">Grades</string>
    <string name="nav_subjects">Subjects</string>
    <string name="Communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_github">Github</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_notes">Notes</string>
    <string name="notes_camera">Camera</string>
    <string name="notes_file">imageNote</string>

    <string name="subject_created">Subject created</string>

</resources>
