<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_events"
            android:title="@string/nav_events"/>
        <item android:id="@+id/nav_grades"
            android:icon="@drawable/ic_menu_grades"
            android:title="@string/nav_grades"/>
        <item android:id="@+id/nav_subjects"
            android:icon="@drawable/ic_menu_subjects"
            android:title="@string/nav_subjects"/>
        <item android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_notes"
            android:title="@string/nav_notes"/>
    </group>

    <item android:title="@string/Communicate">
        <menu>
            <item android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share"/>
            <item android:id="@+id/nav_github"
                android:icon="@drawable/ic_menu_github"
                android:title="@string/nav_github"/>
        </menu>
    </item>
</menu>